# langchainRustAgent

./: .gitignore  AGENTS.md  Cargo.toml  README.md  agent_test.json  check_data.js  check_db.js  check_mongo.js  config.toml.example  fix_qdrant.py  fix_qdrant.sh  restore_config.toml  search_q.json  search_test.py  search_zh.json  test_agent.json  test_exec.json  test_plan.json  tmp_check.js  update_qdrant.json  使用指南.md  部署指南.md
crates/langchainrust/: Cargo.toml
crates/langchainrust/src/: lib.rs
crates/langchainrust/src/agents/: base.rs  mod.rs  types.rs
crates/langchainrust/src/agents/function_calling/: agent.rs  mod.rs
crates/langchainrust/src/agents/react/: agent.rs  mod.rs  parser.rs  prompt.rs
crates/langchainrust/src/callbacks/: base.rs  langsmith_client.rs  mod.rs  run_tree.rs  run_type.rs
crates/langchainrust/src/callbacks/handlers/: file_handler.rs  langsmith_handler.rs  mod.rs  stdout_handler.rs
crates/langchainrust/src/chains/: base.rs  conversation_chain.rs  llm_chain.rs  mod.rs  retrieval_qa.rs  router_chain.rs  sequential_chain.rs
crates/langchainrust/src/core/: mod.rs
crates/langchainrust/src/core/language_models/: base.rs  chat.rs  mod.rs
crates/langchainrust/src/core/runnables/: config.rs  mod.rs  runnable_trait.rs
crates/langchainrust/src/core/tools/: base.rs  mod.rs  registry.rs  structured.rs  structured_output.rs  tool_definition.rs
crates/langchainrust/src/embeddings/: deepseek.rs  mock.rs  mod.rs  openai.rs  qwen.rs
crates/langchainrust/src/langgraph/: checkpointer.rs  compiled.rs  edge.rs  errors.rs  graph.rs  mod.rs  node.rs  persistence.rs  state.rs  subgraph.rs
crates/langchainrust/src/language_models/: mod.rs
crates/langchainrust/src/language_models/ollama/: chat.rs  config.rs  mod.rs
crates/langchainrust/src/language_models/openai/: chat.rs  config.rs  mod.rs  sse.rs
crates/langchainrust/src/language_models/providers/: anthropic.rs  deepseek.rs  mod.rs  moonshot.rs  qwen.rs  zhipu.rs
crates/langchainrust/src/memory/: base.rs  buffer.rs  mod.rs  mongo_memory.rs  persistent.rs  summary.rs  summary_buffer.rs  window.rs
crates/langchainrust/src/prompts/: chat_prompt_template.rs  mod.rs  prompt_template.rs
crates/langchainrust/src/retrieval/: chunked_hybrid.rs  hybrid.rs  hyde.rs  mod.rs  multi_query.rs  reranking.rs  retriever.rs  splitter.rs  unified_hybrid.rs
crates/langchainrust/src/retrieval/bm25/: algorithm.rs  chunked.rs  index.rs  mod.rs  retriever.rs  tokenizer.rs
crates/langchainrust/src/retrieval/loaders/: csv.rs  json.rs  markdown.rs  mod.rs  pdf.rs  text.rs
crates/langchainrust/src/schema/: mod.rs
crates/langchainrust/src/schema/messages/: message.rs  mod.rs
crates/langchainrust/src/tools/: calculator.rs  datetime.rs  math.rs  mod.rs  url_fetch.rs
crates/langchainrust/src/vector_stores/: chunked_vector_store.rs  document_store.rs  memory.rs  mod.rs  mongo_document_store.rs  provider.rs  qdrant.rs  qdrant_impl.rs
docs/: Function Calling 机制说明.md  PROMPT_HISTORY.md  压缩策略学习指南.md
docs/superpowers/specs/: 2026-04-28-ai-aggregate-system-design.md
frontend/: README.md  frontend.tar  index.html  nginx.conf
frontend-next/: index.html  package-lock.json  package.json  vite.config.ts
frontend-next/src/api/: client.ts
frontend-next/src/layouts/: MainLayout.vue
frontend-next/src/router/: index.ts
frontend-next/src/stores/: agent.ts
frontend-next/src/views/evaluate/: EvaluateView.vue
frontend-next/src/views/monitor/: MonitorView.vue
frontend-next/src/views/playground/: PlaygroundView.vue
frontend-next/src/views/settings/: SettingsView.vue
frontend-next/src/views/tools/: ToolsView.vue
frontend/css/: style.css
frontend/js/: aggregate.js  api.js  app.js  search.js  test.js  upload.js
internal/: OpenCode对话存储方案.md  对话压缩方案研究.md  开源框架对话存储方案.md
scripts/: deploy.ps1  deploy.sh  server-deploy.sh
src/: api.rs  bm25_store.rs  config.rs  conversation_store.rs  document_processor.rs  hybrid_store.rs  langgraph_demo.rs  lib.rs  main.rs  qdrant_store.rs  search_test.rs
src/agents/: arxiv.rs  github.rs  hackernews.rs  mod.rs  rss.rs
src/errors/: agent_error.rs  api_error.rs  bm25_error.rs  conversation_error.rs  graph_error.rs  hybrid_error.rs  mod.rs  process_error.rs  store_error.rs  test_error.rs
src/handlers/: aggregate.rs  chat.rs  document.rs  error.rs  langgraph.rs  mod.rs  playground.rs  search.rs  stats.rs  test.rs  upload.rs
src/models/: aggregate.rs  chat.rs  document.rs  langgraph.rs  mod.rs  search.rs  stats.rs  test_case.rs  upload.rs
src/routes/: mod.rs
src/services/: agent_executor.rs  aggregate_service.rs  api_service.rs  cost_tracker.rs  evaluate.rs  langgraph_service.rs  mod.rs  pageindex.rs  rate_limiter.rs  tool_calling.rs  tools.rs  verify.rs  vision.rs
src/services/mcp/: mcp_bridge.rs  mcp_client.rs  mcp_server.rs  mod.rs
src/stores/: bm25.rs  content_store.rs  conversation.rs  hybrid.rs  mod.rs  pageindex_store.rs  qdrant.rs
src/utils/: chunkers.rs  document_processor.rs  mod.rs  search_test.rs
static/: index.html
